// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SouthForm check SouthForm with empty south 1`] = `
<div>
  <div
    class="d-flex align-items-center w-100 oi-sub-nav"
  >
    <h6
      class="text-muted d-flex align-items-center ps-3 pt-2 pb-2 mb-0"
    >
      <div>
        emptySouth
      </div>
      <svg
        class="oi-icon mx-2"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1c18.8 18.7 18.8 49.1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z"
        />
      </svg>
    </h6>
    <div
      class="pull-right me-3"
    >
      <button
        class="inline-button autosize oi-status-button btn btn-outline-secondary btn-sm"
        type="button"
      >
        Status
      </button>
      <button
        class="inline-button autosize oi-points-button btn btn-outline-secondary btn-sm"
        type="button"
      >
        Points (0)
      </button>
    </div>
  </div>
  <div
    class="container-fluid"
  >
    <form
      class="m-2"
    >
      <div
        class="row"
      >
        <h5>
          General settings
          <button
            class="util-button mt-1 btn btn-link"
            id="id"
          >
            <svg
              class="oi-help"
              fill="currentColor"
              height="12"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
              />
            </svg>
          </button>
        </h5>
      </div>
      <div
        class="container-fluid"
      >
        <div
          class="collapse"
          toggler="id"
        >
          <div
            class="row"
            style="margin-bottom: 15px;"
          >
            <div
              class="col"
            >
              <ul>
                <li>
                  This form allows to configure South-specific parameters.
                </li>
                <li>
                  You need to activate the South connector with the enabled checkbox.
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-4"
        />
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-12"
        >
          <div
            class="row"
          >
            <h5>
              MQTT Settings
              <button
                class="util-button mt-1 btn btn-link"
                id="id"
              >
                <svg
                  class="oi-help"
                  fill="currentColor"
                  height="12"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                  />
                </svg>
              </button>
            </h5>
          </div>
          <div
            class="container-fluid"
          >
            <div
              class="collapse"
              toggler="id"
            >
              <div
                class="row"
                style="margin-bottom: 15px;"
              >
                <div
                  class="col"
                >
                  <div>
                    <ul>
                      <li>
                        <b>
                          Url:
                        </b>
                        MQTT host to connect. Make sure you specify the right protocol, host and port number. The MQTT client may not get connected if you mention wrong port number or interchange port numbers.
                      </li>
                      <li>
                        <b>
                          QoS:
                        </b>
                        The Quality of Service (QoS) level is an agreement between the sender of a message and the receiver of a message that defines the guarantee of delivery for a specific message. There are 3 QoS levels in MQTT:
                        <ul>
                          <li>
                            At most once (0)
                          </li>
                          <li>
                            At least once (1)
                          </li>
                          <li>
                            Exactly once (2)
                          </li>
                        </ul>
                      </li>
                      <li>
                        <b>
                          Persistent:
                        </b>
                        In this mode the broker will store subscription information, and undelivered messages for the client. With a non persistent connection the broker does not store any subscription information or undelivered messages for the client. For this option to take effect QoS must be set to 1 or 2. In order for the broker to store session information the engine name is used as MQTT client id .
                      </li>
                      <li>
                        <b>
                          Username:
                        </b>
                        Username required by the broker, if any.
                      </li>
                      <li>
                        <b>
                          Password:
                        </b>
                        Password required by the broker, if any.
                      </li>
                      <li>
                        <b>
                          Cert File:
                        </b>
                        Server certificate used for MQTTS protocol in PEM format.
                      </li>
                      <li>
                        <b>
                          Key File:
                        </b>
                        MQTT client private key in PEM format.
                      </li>
                      <li>
                        <b>
                          CA File:
                        </b>
                        Certificate Authority file in PEM format. If empty we consider the Cert File as self-signed certificate.
                      </li>
                      <li>
                        <b>
                          Reject Unauthorized:
                        </b>
                        In some cases the certificate (CertFile) can not be verified. (ex: certificate is self-signed or Certification Authority can not be contacted). If Reject Unauthorized is set to false, the connection will still be encrypted but may be vulnerable to man in the middle attacks.
                      </li>
                      <li>
                        <b>
                          Keepalive:
                        </b>
                        Set to 0 to disable.
                      </li>
                      <li>
                        <b>
                          Reconnect period:
                        </b>
                        Interval between two reconnections. Disable auto reconnect by setting to 0.
                      </li>
                      <li>
                        <b>
                          Connect timout:
                        </b>
                        Time to wait before a CONNACK is received.
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-4"
        />
        <div
          class="col-md-1"
        />
        <div
          class="col-md-1"
        />
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-4"
        />
        <div
          class="col-md-4"
        />
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-4"
        />
        <div
          class="col-md-4"
        />
        <div
          class="col-md-4"
        />
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-4"
        />
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-4"
        >
          <div
            class="mb-3"
          >
            <label
              class="form-label"
              for="south.0.settings.keepalive"
            >
              Keep Alive Interval (ms)
            </label>
            <input
              aria-invalid="false"
              class="oi-form-input form-control"
              id="south.0.settings.keepalive"
              name="south.0.settings.keepalive"
              type="integer"
              value=""
            />
            <div
              class="invalid-feedback"
            />
          </div>
        </div>
        <div
          class="col-md-4"
        >
          <div
            class="mb-3"
          >
            <label
              class="form-label"
              for="south.0.settings.reconnectPeriod"
            >
              Reconnect period (ms)
            </label>
            <input
              aria-invalid="false"
              class="oi-form-input form-control"
              id="south.0.settings.reconnectPeriod"
              name="south.0.settings.reconnectPeriod"
              type="integer"
              value=""
            />
            <div
              class="invalid-feedback"
            />
          </div>
        </div>
        <div
          class="col-md-4"
        >
          <div
            class="mb-3"
          >
            <label
              class="form-label"
              for="south.0.settings.connectTimeout"
            >
              Connect Timeout (ms)
            </label>
            <input
              aria-invalid="false"
              class="oi-form-input form-control"
              id="south.0.settings.connectTimeout"
              name="south.0.settings.connectTimeout"
              type="integer"
              value=""
            />
            <div
              class="invalid-feedback"
            />
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-12"
        >
          <div
            class="row"
          >
            <h5>
              MQTT Payload
              <button
                class="util-button mt-1 btn btn-link"
                id="id"
              >
                <svg
                  class="oi-help"
                  fill="currentColor"
                  height="12"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                  />
                </svg>
              </button>
            </h5>
          </div>
          <div
            class="container-fluid"
          >
            <div
              class="collapse"
              toggler="id"
            >
              <div
                class="row"
                style="margin-bottom: 15px;"
              >
                <div
                  class="col"
                >
                  <div>
                    <ul>
                      <li>
                        <b>
                          Data array path:
                        </b>
                        Optional. If empty, the payload is a simple JSON object. If specified, the JSON contains a JSON object array at the specified path.
                      </li>
                      <li>
                        <b>
                          Value path:
                        </b>
                        Mandatory. This string is the JSON key path where to find the value (in the array element if data array path is specified, or directly in the JSON object if not).
                      </li>
                      <li>
                        <b>
                          Node id path:
                        </b>
                        Optional. If empty, the nodeId is inferred from the topic. If not empty, this string indicates where to find the nodeId value (in the array element if data array path is specified, or directly in the JSON object if not).
                      </li>
                      <li>
                        <b>
                          Quality path:
                        </b>
                        Mandatory. This string is the JSON key path where to find the quality (in the array element if data array path is specified, or directly in the JSON object if not).
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-4"
        />
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-4"
        />
        <div
          class="col-md-4"
        />
        <div
          class="col-md-4"
        />
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-12"
        >
          <div
            class="row"
          >
            <h5>
              Timestamp settings
              <button
                class="util-button mt-1 btn btn-link"
                id="id"
              >
                <svg
                  class="oi-help"
                  fill="currentColor"
                  height="12"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                  />
                </svg>
              </button>
            </h5>
          </div>
          <div
            class="container-fluid"
          >
            <div
              class="collapse"
              toggler="id"
            >
              <div
                class="row"
                style="margin-bottom: 15px;"
              >
                <div
                  class="col"
                >
                  <div>
                    <p>
                      These parameters describe how to determine the timeStamp
                    </p>
                    <ul>
                      <li>
                        <b>
                          Time Origin:
                        </b>
                        If the value is "oibus" the timestamp will be the timestamp for the reception of the value by oibus. If the value is "payload" the timestamp will be retrieved from the MQTT payload using the key specified below.
                      </li>
                      <li>
                        <b>
                          Timestamp Path:
                        </b>
                        The string indicates which key in the payload contains the timestamp value. If the payload is an array of data, it indicates the key that contains the timestamp value in the elements of this array
                      </li>
                      <li>
                        <b>
                          Timestamp Format:
                        </b>
                        The string indicates which format to use to parse the timestamp. For example, the timestamp '2020-09-16 07:00:00.000' is in the format YYYY-MM-DD HH:mm:ss.SSS. Another example : if the timestamp is '2020-09-16T07:00:00Z' so the format would be YYYY-MM-DDTHH:mm:ssZ.
                      </li>
                      <li>
                        <b>
                          TimeStamp timezone:
                        </b>
                        This field indicates in which timezone the timestamp received is. OIBus then converts it into an UTC timestamp.
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-4"
        />
        <div
          class="col-md-4"
        />
        <div
          class="col-md-4"
        />
        <div
          class="col-md-2"
        />
      </div>
    </form>
  </div>
</div>
`;

exports[`SouthForm check SouthForm with south: TestFolderScanner 1`] = `
<div>
  <div
    class="d-flex align-items-center w-100 oi-sub-nav"
  >
    <h6
      class="text-muted d-flex align-items-center ps-3 pt-2 pb-2 mb-0"
    >
      <div>
        TestFolderScanner
      </div>
      <svg
        class="oi-icon mx-2"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1c18.8 18.7 18.8 49.1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z"
        />
      </svg>
    </h6>
    <div
      class="pull-right me-3"
    >
      <button
        class="inline-button autosize oi-status-button btn btn-outline-secondary btn-sm"
        type="button"
      >
        Status
      </button>
      <button
        class="inline-button autosize oi-points-button btn btn-outline-secondary btn-sm"
        type="button"
      >
        Points (0)
      </button>
    </div>
  </div>
  <div
    class="container-fluid"
  >
    <form
      class="m-2"
    >
      <div
        class="row"
      >
        <h5>
          General settings
          <button
            class="util-button mt-1 btn btn-link"
            id="id"
          >
            <svg
              class="oi-help"
              fill="currentColor"
              height="12"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
              />
            </svg>
          </button>
        </h5>
      </div>
      <div
        class="container-fluid"
      >
        <div
          class="collapse"
          toggler="id"
        >
          <div
            class="row"
            style="margin-bottom: 15px;"
          >
            <div
              class="col"
            >
              <ul>
                <li>
                  This form allows to configure South-specific parameters.
                </li>
                <li>
                  You need to activate the South connector with the enabled checkbox.
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-4"
        >
          <div
            class="mb-3 form-check form-switch"
          >
            <label
              class="form-check-label"
            >
              Disabled
            </label>
            <input
              class="oi-form-input checkbox form-check-input"
              id="south.0.enabled"
              name="south.0.enabled"
              type="checkbox"
            />
            <small
              class="form-text text-muted"
            >
              <div>
                Enable this South connector
              </div>
            </small>
          </div>
        </div>
        <div
          class="col-md-4"
        >
          <div
            class="mb-3"
          >
            <select
              aria-invalid="false"
              class="oi-form-input form-select"
              id="south.0.scanMode"
              name="south.0.scanMode"
            >
              <option
                value="everySecond"
              >
                everySecond
              </option>
              <option
                value="every10Second"
              >
                every10Second
              </option>
              <option
                value="every1Min"
              >
                every1Min
              </option>
              <option
                value="listen"
              >
                listen
              </option>
            </select>
            <div
              class="invalid-feedback"
            />
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-12"
        >
          <div
            class="row"
          >
            <h5>
              FolderScanner settings
              <button
                class="util-button mt-1 btn btn-link"
                id="id"
              >
                <svg
                  class="oi-help"
                  fill="currentColor"
                  height="12"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                  />
                </svg>
              </button>
            </h5>
          </div>
          <div
            class="container-fluid"
          >
            <div
              class="collapse"
              toggler="id"
            >
              <div
                class="row"
                style="margin-bottom: 15px;"
              >
                <div
                  class="col"
                >
                  <p>
                    The FolderScanner South periodically checks the input folder for new files at an interval specified by scan mode. When a new file is detected it will be sent to any North capable of handling files and configured to accept files from this South.
                  </p>
                  <p>
                    Please use always the / separator. OIBus will convert it according to the platform. For example, on Windows, c:/input/ will be converted to c:\\input\\ Make sure OIBus has READ and WRITE access to this folder.
                    <b>
                      When OIBus is started as a Windows service, you may have to assign a user logon in the Windows services.msc console.
                    </b>
                  </p>
                  <p>
                    It is possible to specify how to handle files.
                  </p>
                  <ul>
                    <li>
                      If Preserve File is checked the files will be left intact, otherwise they will be removed from the input folder.
                    </li>
                    <li>
                      If Ignore Modified Date is checked the last edited time of the file will be ignored when the file is preserved. This implies that a file will be sent at each scan of the folder
                    </li>
                    <li>
                      The Minimum Age option is used to specify the time since the file was last modified. It is used to prevent handling files that are still populated.
                    </li>
                    <li>
                      The RegExp option can be used to filter what kind of files to be handled.
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-4"
        >
          <div
            class="mb-3"
          >
            <label
              class="form-label"
              for="south.0.settings.inputFolder"
            >
              Input folder
            </label>
            <input
              aria-invalid="false"
              class="oi-form-input form-control"
              id="south.0.settings.inputFolder"
              name="south.0.settings.inputFolder"
              type="text"
              value="./input/"
            />
            <div
              class="invalid-feedback"
            />
            <small
              class="form-text text-muted"
            >
              <div>
                Path to folder such as: c:/input/
              </div>
            </small>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-4"
        >
          <div
            class="mb-3 form-check form-switch"
          >
            <label
              class="form-check-label"
            >
              Preserve File?
            </label>
            <input
              checked=""
              class="oi-form-input checkbox form-check-input"
              id="south.0.settings.preserveFiles"
              name="south.0.settings.preserveFiles"
              type="checkbox"
            />
          </div>
        </div>
        <div
          class="col-md-4"
        >
          <div
            class="mb-3 form-check form-switch"
          >
            <label
              class="form-check-label"
            >
              Ignore modified date
            </label>
            <input
              class="oi-form-input checkbox form-check-input"
              id="south.0.settings.ignoreModifiedDate"
              name="south.0.settings.ignoreModifiedDate"
              type="checkbox"
            />
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-4"
        >
          <div
            class="mb-3"
          >
            <label
              class="form-label"
              for="south.0.settings.minAge"
            >
              Minimum Age
            </label>
            <input
              aria-invalid="false"
              class="oi-form-input form-control"
              id="south.0.settings.minAge"
              name="south.0.settings.minAge"
              type="integer"
              value="0"
            />
            <div
              class="invalid-feedback"
            />
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-4"
        >
          <div
            class="mb-3"
          >
            <label
              class="form-label"
              for="south.0.settings.regex"
            >
              RegExp
            </label>
            <input
              aria-invalid="false"
              class="oi-form-input form-control"
              id="south.0.settings.regex"
              name="south.0.settings.regex"
              type="text"
              value=".csv"
            />
            <div
              class="invalid-feedback"
            />
            <small
              class="form-text text-muted"
            >
              <div>
                RegExp to filter the folder
              </div>
            </small>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-md-4"
        >
          <div
            class="mb-3 form-check form-switch"
          >
            <label
              class="form-check-label"
            >
              Compress File?
            </label>
            <input
              class="oi-form-input checkbox form-check-input"
              id="south.0.settings.compression"
              name="south.0.settings.compression"
              type="checkbox"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
